<resources>
    <string name="app_name">PrimerParcial</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_genero">Genero</string>
    <string name="hint_hombre">Hombre</string>
    <string name="hint_mujer">Mujer</string>
    <string name="hint_otro">Otro</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirmar Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrate</string>
    <string name="error_message_name">Ingresa Nombre Completo</string>
    <string name="error_message_age">Ingresa edad correcta</string>
    <string name="error_message_email">Ingresa un mail valido</string>
    <string name="error_message_password">Ingresa Password</string>
    <string name="success_message">Registracion Exitosa</string>
    <string name="text_not_member">No tienes cuenta aún? Crear una</string>
    <string name="text_already_member">Ya tienes cuenta? Logeate</string>
    <string name="error_email_exists">Email ya existe</string>
    <string name="error_password_match">Password no coinciden</string>
    <string name="error_valid_email_password"> Email o Password incorrectos</string>
    <string name="action_settings">Configuración</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Lista de contactos</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Borrar</string>
</resources>
